--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,51 @@
-/.venv
-/viewer_monitor.log
+# APIキーや設定ファイル
+config.json
+
+# ログファイル
+*.log
+viewer_monitor.log
+
+# 出力ファイル
+viewer_count_log.csv
+
+# Python関連
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# 仮想環境
+.venv/
+venv/
+ENV/
+env/
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# OS関連
+.DS_Store
+Thumbs.db
+
+# 一時ファイル
+*.tmp
+*.temp
